ON-4: add header

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Store</title>
 </head>
-<body id="body">
-    <!-- <header id="header">
-        <img src="assets/img/logo.png" alt="logo" class="logo">
-        <div></div>
-        <div>
-            <img src="assets/img/basket.png" alt="basket" class="basket">
-        </div>
-    </header> -->
-    
+<body id="root">
 </body>
 </html>
