--- a/src/pages/catalog/catalog.template.html
+++ b/src/pages/catalog/catalog.template.html
@@ -1,5 +1,5 @@
-<select name="options" id="">
-    <option selected>Sort options:</option></option>
+<select name="options">
+    <option selected>Sort options:</option>
 </select>
 <div class="catalogHead_text">
     <span>Found: </span>
