--- a/src/pages/catalog/catalog.template.html
+++ b/src/pages/catalog/catalog.template.html
@@ -1,11 +1,9 @@
 <select name="options">
     <option selected>Sort options:</option>
 </select>
-<div class="catalogHead_text">
-    <span>Found: </span>
-</div>
+<div class="catalogHead_text"></div>
 <input type="search" placeholder="Search product">
 <div>
-    <img src="../../assets/img/page_type_1.png" alt="" class="catalogHead_img">
-    <img src="../../assets/img/page_type_2.png" alt="" class="catalogHead_img">
+    <img id="mode_small" src="../../assets/img/page_type_1.png" alt="" class="catalogHead_img">
+    <img id="mode_big" src="../../assets/img/page_type_4.png" alt="" class="catalogHead_img">
 </div>
