--- a/src/pages/catalog/catalog.template.html
+++ b/src/pages/catalog/catalog.template.html
@@ -1,5 +1,11 @@
 <select name="options">
     <option selected>Sort options:</option>
+    <option value="price-ASC">Sort by price ASC</option>
+    <option value="price-DESC">Sort by price DESC</option>
+    <option value="rating-ASC">Sort by rating ASC</option>
+    <option value="rating-DESC">Sort by rating DESC</option>
+    <option value="discount-ASC">Sort by discount ASC</option>
+    <option value="discount-DESC">Sort by discount DESC</option>
 </select>
 <div class="catalogHead_text"></div>
 <input type="search" placeholder="Search product">
