--- a/src/pages/catalog/catalog.template.html
+++ b/src/pages/catalog/catalog.template.html
@@ -1,8 +1,14 @@
-<select name="options">
-    <option selected>Sort options:</option>
+<select name="options" id="select_sort" value="sort">
+    <option value="sort">Sort options:</option>
+    <option value="price-ASC">Sort by price ASC</option>
+    <option value="price-DESC">Sort by price DESC</option>
+    <option value="rating-ASC">Sort by rating ASC</option>
+    <option value="rating-DESC">Sort by rating DESC</option>
+    <option value="discount-ASC">Sort by discount ASC</option>
+    <option value="discount-DESC">Sort by discount DESC</option>
 </select>
 <div class="catalogHead_text"></div>
-<input type="search" placeholder="Search product">
+<input type="search" id="search" placeholder="Search product">
 <div>
     <img id="mode_small" src="../../assets/img/page_type_1.png" alt="" class="catalogHead_img">
     <img id="mode_big" src="../../assets/img/page_type_2.png" alt="" class="catalogHead_img">
